# pi_sensor

./: get_data_from_sensors.py  monitor.sh  sample_temperatures.csv
collectdata/: .gitignore  DataRecord.cc  DataRecord.h  FilterDataRecords.cc  FilterDataRecords.h  FilterDay.cc  FilterDay.h  FilterString.cc  FilterString.h  Gen24HoursPlot.cc  Gen24HoursPlot.h  GenGnuPlotData.cc  GenGnuPlotData.h  GenXDaysPlot.cc  GenXDaysPlot.h  Makefile.am  configure.ac  csv_util.cc  csv_util.h  main.cc  main_window.cc  main_window.h  tools_config.h
data/: temperatures-2021-02-28-till-2021-10-25.csv  temperatures-2021-02-28-till-2021-12-23.csv
etc/system.d/: README  pi_sensor.service
etc/xdg/autostart/: pi_sensor.desktop
sync_clock/: .gitignore  README.txt  crontab_entry.txt  dextergps.py  get_date_and_time_from_gps.py  sync_date_and_time.sh  testdata.txt
